// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[App] matches snapshot 1`] = `
<div>
  <h1>
    Hello World!
  </h1>
  <div />
</div>
`;

exports[`[App] should update after callback 1`] = `
<div>
  <h1>
    Hello World!
  </h1>
  <div>
    <div>
      GET
       
      https://example.com
    </div>
  </div>
</div>
`;
